<resources>
    <string name="app_name">ToDoList</string>
    <string name="tg_link">tg: <a href="https://t.me/Lexa_0_Suvorov">@Lexa_0_Suvorov</a></string>
    <string name="github_link">github: <a href="https://github.com/AliakseiSuvorau">@AliakseiSuvorau</a></string>
    <string name="enter_tag_name">Enter tag name</string>
    <string name="task_delete_confirmation">Are you sure you want to delete task?</string>
    <string name="contacts">Contacts:</string>
    <string name="back">Back</string>
    <string name="enter_filter_name">Enter filter name</string>
    <string name="show_finished_tasks">Show finished tasks</string>
    <string name="show_unfinished_tasks">Show unfinished tasks</string>
    <string name="deadline">Deadline</string>
    <string name="enter_task_urgency">Enter task urgency</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="task_description">Task description</string>
    <string name="tasks">Tasks</string>
    <string name="delete">Delete</string>
    <string name="all">All</string>
    <string name="current">Current</string>
    <string name="settings">Settings</string>
    <string name="to_do_list">To-Do List</string>
    <string name="nothing_here">Nothing here</string>
    <string name="disable_filters">Disable filters</string>
    <string name="disable_ads">Disable ads</string>
    <string name="sort_tasks_by_urgency">Sort tasks by urgency</string>
    <string name="choose_tags">Choose tags</string>
    <string name="filters">Filters</string>
</resources>